# TP-performances

./: .gitignore  cheatsheet.MD  lancer.sh
rapport/: main.tex  moyen_vecteur.txt  petit_vecteur.txt
tri-1.0/: Makefile  Makefile.am  Makefile.in  README  algo_principal.h  algo_sequentiel.c  algo_threads.c  appels_sequentiels.h  commun.h  config.status  configure  configure.ac  creer_vecteur.c  lancer.sh  main.c  temps.c  temps.h  tri.c
tri-1.0/.deps/: algo_sequentiel.Po  algo_threads.Po  creer_vecteur.Po  main.Po  temps.Po  tri.Po
